Gateway works as intended.
