# security/src/main/java/com/vzk/security/controllers/AuthorizationController.java
@@ -1,17 +1,18 @@
 package com.vzk.security.controllers;
 
 import lombok.RequiredArgsConstructor;
+import org.openapitools.api.AuthorizationApi;
+import org.openapitools.model.JwtAuthorizationResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/api/v1/auth/resource")
-@RequiredArgsConstructor
-public class AuthorizationController {
-    @GetMapping
-    public ResponseEntity<String> sayHello() {
-        return ResponseEntity.ok("Here is your resource");
+public class AuthorizationController implements AuthorizationApi {
+
+    @Override
+    public ResponseEntity<JwtAuthorizationResponse> validateToken(String token) {
+        return ResponseEntity.ok(new JwtAuthorizationResponse(true));
     }
 }
